[package]
name = "deckweaver"
version = "0.3.0"
edition = "2021"
authors = ["DesignGears"]
description = "Stream Deck plugin for PipeWeaver audio control"
license = "MIT"
repository = "https://github.com/designgears/DeckWeaver"

[lib]
name = "deckweaver"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "auto-initialize"] }
pyo3-log = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image rendering
tiny-skia = "0.11"
resvg = "0.45"
image = "0.25"

# Utilities
parking_lot = "0.12"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
